--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,41 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
-
-// Стили для файла с примером HTML-фрагмента
-@import './example';
+// font ROBOTO=======================================================
+@font-face {
+    font-family: 'Roboto';
+    src: url('../fonts/Roboto-Medium.eot');
+    src: local('☺'), url('../fonts/Roboto-Medium.woff') format('woff'),
+      url('../fonts/Roboto-Medium.ttf') format('truetype'),
+      url('../fonts/Roboto-Medium.svg') format('svg');
+    font-weight: 500;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'Roboto';
+    src: url('../fonts/Roboto-Regular.eot');
+    src: local('☺'), url('../fonts/Roboto-Regular.woff') format('woff'),
+      url('../fonts/Roboto-Regular.ttf') format('truetype'),
+      url('../fonts/Roboto-Regular.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
+  //===================================================================
+  // general
+  @import './utils/variables';
+  @import './utils/placeholders';
+  @import './utils/mixins';
+  @import './components/general-styles';
+  @import './components/button';
+  // ==================================================================
+  // header
+//   @import './components/header';
+  // ==================================================================
+  // section
+//   @import './components/gallery';
+//   @import './components/pagination';
+//   @import './components/modal';
+//   @import './components/logIn';
+//   @import './components/filmCard';
+//   @import './components/developers';
+  // ==================================================================
+  //  footer
+//   @import './components/footer';
+  // ==================================================================
