--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -27,12 +27,14 @@
   // ==================================================================
   // header
 //   @import './components/header';
+
   // ==================================================================
   // section
 //   @import './components/gallery';
 //   @import './components/pagination';
+  // ==================================================================
 //   @import './components/modal';
-//   @import './components/logIn';
+  @import './components/formStyless';
 //   @import './components/filmCard';
 //   @import './components/developers';
   // ==================================================================
