--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -26,7 +26,7 @@
   @import './components/button';
   // ==================================================================
   // header
-//   @import './components/header';
+@import './components/header';
 
   // ==================================================================
   // section
