--- a/src/templates/fetchMovieTemplate.hbs
+++ b/src/templates/fetchMovieTemplate.hbs
@@ -1,4 +1,5 @@
 {{#each this}}
+<article>
 <li>
     {{#if poster_path}}
           <img
@@ -20,4 +21,5 @@
      <span>|{{year}}</span>
      <span>{{vote_average}}</span>
 </li>
+  </article>
 {{/each}}
