--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -9,8 +9,8 @@
     font-size: 14px;    
     font-weight: 400;    
     line-height: 1.17;    
-    color: #545454;    
-    background-color: #F7F7F7;
+    color: $secondary-text-color;    
+    background-color: $footer-Bg-color;
     @media screen and (min-width: 769px) {
         flex-direction: row;        
         justify-content: center;        
@@ -22,7 +22,7 @@
 }
 .line {    
     display:inline-block;        
-    border-right: solid 1px #545454;    
+    border-right: solid 1px $secondary-text-color;    
     height: 13px;    
     margin-left: 5px;    
     margin-right:5px; 
@@ -56,7 +56,10 @@
     }
 }
 
-.team-link{    
-    color: #545454;    
+.team-button{    
+    color: $secondary-text-color;    
     text-decoration: underline;  
+    border: none;
+    background-color: $footer-Bg-color;
+    text-align: center;
 }
