--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -30,7 +30,7 @@
 
   // ==================================================================
   // section
-//   @import './components/gallery';
+  @import './components/gallery';
 //   @import './components/pagination';
   // ==================================================================
 //   @import './components/modal';
