--- a/src/sass/components/gallery.scss
+++ b/src/sass/components/gallery.scss
@@ -24,7 +24,7 @@
 
 .gallery__card {
   @media screen and(max-width: 767px) {
-    // margin: 0 auto;
+    margin: 0 auto;
   }
   @media screen and (max-width: 767px) {
     &:not(:last-child) {
