--- a/src/sass/components/gallery.scss
+++ b/src/sass/components/gallery.scss
@@ -14,9 +14,12 @@
 }
 
 .gallery__card-set {
+  display: flex;
+  flex-wrap: wrap;
+  @media screen and (max-width: 767px) {
+    justify-content: center;
+  }
   @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
     margin-left: calc(-1 * 30px);
     margin-top: calc(-1 * 30px);
   }
