--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -34,7 +34,7 @@
 @import './components/gallery';
 @import './components/pagination';
 // ==================================================================
-//   @import './components/modal';
+  @import './components/modal';
 @import './components/formStyless';
 //   @import './components/filmCard';
 //   @import './components/developers';
