--- a/src/sass/components/modal.scss
+++ b/src/sass/components/modal.scss
@@ -1,5 +1,5 @@
 body.show-modal {
-  overflow-y: hidden;
+  // overflow-y: hidden;
   & .backdrop {
     opacity: 1;
     visibility: visible;
@@ -18,7 +18,7 @@ body.show-modal {
   padding: 50px 0;
   background-color: rgba(0, 0, 0, 0.25);
   pointer-events: none;
-  overflow-y: scroll;
+  // overflow-y: scroll;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   @media screen and (min-width: 768px) {
     padding: 0;
@@ -29,14 +29,14 @@ body.show-modal {
   position: relative;
   width: fit-content;
   left: 50%;
-  top: 0;
-  transform: translateX(-50%);
+  top: 50%;
+  transform: translate(-50%, -50%);
   max-width: 90%;
   @media screen and (min-width: 768px) {
     max-width: 80%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    // left: 50%;
+    // top: 50%;
+    // transform: translate(-50%, -50%);
   }
 }
 .film-detail {
