--- a/src/templates/fetchMovieTemplate.hbs
+++ b/src/templates/fetchMovieTemplate.hbs
@@ -1,5 +1,5 @@
 {{#each this}}
-<li class="gallery__card list" id={{id}}>
+<li class="gallery__card list" data-id={{id}}>
     {{#if poster_path}}
           <div class="gallery__card-thumb">
           <img
