--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -35,6 +35,7 @@
 @import './components/pagination';
 // ==================================================================
   @import './components/modal';
+  @import './components/detailFilm';
 @import './components/formStyless';
 //   @import './components/filmCard';
 //   @import './components/developers';
