--- a/src/sass/components/gallery.scss
+++ b/src/sass/components/gallery.scss
@@ -44,6 +44,7 @@
 .gallery__image {
   border-radius: 5px;
   width: 280px;
+  height: 398px;
   @media screen and (min-width: 768px) {
     width: 293px;
   }
