--- a/src/templates/fetchMovieTemplate.hbs
+++ b/src/templates/fetchMovieTemplate.hbs
@@ -1,11 +1,20 @@
 <li class="gallery__card list" >
   <article id={{id}}>      
     <div class="gallery__card-thumb">
+         {{#if poster_path}}
           <img
             class="gallery__image"
             src='https://image.tmdb.org/t/p/w500{{poster_path}}'
             alt='{{original_title}}'
+          /> 
+           {{else}}
+          <img
+            class="gallery__image"
+            src='https://i.ibb.co/NjvMgv7/poster.png'
+            alt='no_poster'
           />
+        {{/if}}
+
     </div>
     <div class="gallery__card-caption">
       <h2 class="gallery__title">{{original_title}}</h2>
