--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -33,8 +33,8 @@
 // section
 @import './components/gallery';
 @import './components/pagination';
-// ==================================================================
-//   @import './components/modal';
+// ==================================================================   
+@import './components/popup.scss';
 @import './components/formStyless';
 //   @import './components/filmCard';
 //   @import './components/developers';
