--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -36,7 +36,7 @@
 // ==================================================================
 //   @import './components/modal';
 @import './components/formStyless';
-//   @import './components/filmCard';
+  @import './components/detailFilm.scss';
 //   @import './components/developers';
 // ==================================================================
 //  footer
