--- a/src/templates/card.hbs
+++ b/src/templates/card.hbs
@@ -1,9 +1,9 @@
 <div class="film-detail">
     <div class="film-detail__img">
         {{#if backdrop_path}}
-            <img src="https://image.tmdb.org/t/p/w500{{backdrop_path}}" alt="">
+            <img src="https://image.tmdb.org/t/p/w500{{backdrop_path}}" alt="{{original_title}}">
         {{else}}
-          <img src="https://image.tmdb.org/t/p/w500{{poster_path}}" alt="">
+          <img src="https://i.ibb.co/NjvMgv7/poster.png" alt="no_poster">
         {{/if}}
     </div>
     <div class="film-detail__information">
@@ -24,9 +24,7 @@
             <div class="film-detail__item">
                 <p class="film-detail__item--name">Genre</p>
                 <p class="film-detail__item--value">
-                    {{#each genres}}
-                    <span> {{name}} </span>
-                    {{/each}}
+                    {{genres.0.name}} 
                 </p>
             </div>
             <div class="film-detail__about">
