--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
     <div class="header__container container">
       <nav class="navigation">
         <div class="nav">
-        <a href="./index.html" lang="en" class="logo">
+        <a href="./index.html" lang="en" class="logo home">
             <svg class="logo-filmoteka" width="24" height="24">
                 <use href="./images/icons/symbol-defs.svg#logo-filmoteka"></use>
               </svg>
@@ -46,9 +46,9 @@
 
     <div class="btns-library is-hidden" data-action="btn-library-shown">
       <ul class="button-list">
-          <li class="button-list-item"><button type="button" class="button" data-action="btn-watched">Watched</button>
+          <li class="button-list-item"><button type="button" class="btn-watched" data-action="btn-watched">Watched</button>
           </li>
-          <li class="button-list-item"><button type="button" class="button" data-action="btn-queue">Queue</button></li>
+          <li class="button-list-item"><button type="button" class="btn-queue" data-action="btn-queue">Queue</button></li>
       </ul>
   </div>
   
