--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
     <div class="header__container container">
       <nav class="navigation">
         <div class="nav">
-        <a href="./index.html" lang="en" class="logo home">
+        <a href="/" lang="en" class="logo">
             <svg class="logo-filmoteka" width="24" height="24">
                 <use href="./images/icons/symbol-defs.svg#logo-filmoteka"></use>
               </svg>
@@ -10,7 +10,7 @@
         </a>
         <ul class="site-nav__list">
           <li class="site-nav__item">
-        <a href="./index.html" class="home-link current-link site-nav__link">Home</a>
+        <a href="/" class="home-link current-link site-nav__link">Home</a>
       </li>
         <li class="site-nav__item">
         <a href="/" class="library-link site-nav__link">my library</a>
