--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
     <div class="header__container container">
       <nav class="navigation">
         <div class="nav">
-        <a href="/" lang="en" class="logo">
+        <a href="№" lang="en" class="logo">
             <svg class="logo-filmoteka" width="24" height="24">
                 <use href="./images/icons/symbol-defs.svg#logo-filmoteka"></use>
               </svg>
