--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,10 +10,10 @@
         </a>
         <ul class="site-nav__list">
           <li class="site-nav__item">
-        <a href="/" class="home-link current-link site-nav__link">Home</a>
+        <a href="#" class="home-link current-link site-nav__link">Home</a>
       </li>
         <li class="site-nav__item">
-        <a href="/" class="library-link site-nav__link">my library</a>
+        <a href="#" class="library-link site-nav__link">my library</a>
       </li>
     </ul>
     <ul class="button__list">
