добавил изменения в галерею
Добавил минимальную высоту контейнера, вынес классы контейнера с тега секции

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,3 +1,5 @@
-<section class="container gallery__container">
-    <ul id="gallery" class="gallery__card-set"></ul>
+<section>
+    <div class="container gallery__container">
+        <ul id="gallery" class="gallery__card-set"></ul>
+    </div>
 </section>
