--- a/src/sass/components/gallery.scss
+++ b/src/sass/components/gallery.scss
@@ -1,4 +1,5 @@
 .gallery__container {
+  min-height: 100vh;
   padding-top: 20px;
   padding-bottom: 40px;
   @media screen and (min-width: 768px) {
