--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="footer__info container">
-        <p class="footer__info-text">&copy 2022<span class="line"></span>All Rights Reserved<span class="line"></span>
+        <p class="footer__info-text">&copy; 2022<span class="line"></span>All Rights Reserved<span class="line"></span>
         </p>
         <div class="footer__info-team">
             <p>Developed with</p> <svg class="icon-heart" width="12" height="11">
@@ -8,5 +8,17 @@
             </svg>
             <p>by<button type="button" class="team-button">GoIT Students</button></p>
         </div>
+        <!-- <div class="member-info">
+           
+            <div class="member-card">
+                <div class="member-photo">
+                    <img src="../src/images/team/orlovskyi.jpg" alt="team member">
+                </div>
+                <p class="member-name">name</p>
+                <p class="member-role">role</p>
+            </div>
+        
+           
+        </div> -->
     </div>
 </footer>
