добавил изменения в секцию галереи
переместил пагинацию в секцию галереи

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -2,4 +2,5 @@
     <div class="container gallery__container">
         <ul id="gallery" class="gallery__card-set"></ul>
     </div>
+    <div id="tui-pagination-container" class="tui-pagination"></div>
 </section>
