--- a/src/sass/components/detailFilm.scss
+++ b/src/sass/components/detailFilm.scss
@@ -1,6 +1,6 @@
 
 .film-detail {
-    background-color: #ffffff;
+    background-color: $lite-text-color;
     padding: 50px 20px;
     max-width: 100%;
     @media screen and (min-width: 768px) {
@@ -58,17 +58,26 @@
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
-    color: #8c8c8c;
+    color: $darkest-text-color;
+    &--style{
+      background: #FF6B01;
+      border-radius: 5px;
+      padding: 1px 10px;
+      color: white;
+    }
   }
   
   .film-detail__item--value {
     position: absolute;
     left: 50%;
+    display: flex;
+    align-items: center;
+    grid-column-gap: 10px;
     font-weight: 500;
     font-size: 12px;
     line-height: 14px;
     text-transform: uppercase;
-    color: #000000;
+    color: $primary-text-color;
   }
 
   .film-detail__about {
@@ -89,20 +98,23 @@
     font-size: 12px;
     line-height: 20px;
   
-    color: #000000;
+    color: $primary-text-color;
   }
   
   .film-detail__btns {
     display: flex;
     align-items: center;
     grid-column-gap: 15px;
+    justify-content: center;
+    @media  screen and (min-width:1024px) {
+      justify-content: start;
+    }
   }
   
  .button {
-    color: black;
-    background: #ff6b01;
+    color: $primary-text-color;
     border-radius: 5px;
-    border: 1px solid red;
+    border: 1px solid $secondary-Bg-color;
     font-weight: 500;
     border-radius: 5px;
     padding: 15px 10px;
@@ -112,3 +124,8 @@
     cursor: pointer;
   }
   
+  .button:hover{
+    color: $lite-text-color;
+    background: $acent-Bg-color;
+    border: 1px solid $acent-Bg-color;
+  }
