--- a/src/templates/card.hbs
+++ b/src/templates/card.hbs
@@ -35,7 +35,7 @@
                 </p>
             </div>    
         </div>
-        <div class="film-detail__btns">
+        <div class="film-detail__btns" id="{{id}}">
             <button class="button">add to Watched</button>
             <button class="button">add to queue</button>
         </div>
