--- a/src/sass/components/gallery.scss
+++ b/src/sass/components/gallery.scss
@@ -8,6 +8,10 @@
   }
 }
 
+.gallery__head {
+  display: none;
+}
+
 .gallery__card-set {
   display: flex;
   flex-wrap: wrap;
@@ -63,7 +67,6 @@
 
 .gallery__title {
   text-transform: uppercase;
-  margin-top: 10px;
   font-weight: 500;
   font-size: 15px;
   line-height: 1.3;
@@ -79,6 +82,10 @@
 
 .gallery__card-thumb {
   height: 398px;
+}
+
+.gallery__card-caption {
+  margin-top: 10px;
 }
 
 .gallery__card-thumb,
