добавил изменения в галерею

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
 <section>
-    <h2 class="gallery__head">Gallery</h2>
+    <h2 class="is-hidden">Gallery</h2>
     <div class="container gallery__container">
         <ul id="gallery" class="gallery__card-set"></ul>
     </div>
