--- a/src/templates/card.hbs
+++ b/src/templates/card.hbs
@@ -36,8 +36,8 @@
             </div>    
         </div>
         <div class="film-detail__btns" id="{{id}}">
-            <button class="button">add to Watched</button>
-            <button class="button">add to queue</button>
+            <button class="button" data-action="Watched">add to Watched</button>
+            <button class="button"data-action="queue">add to queue</button>
         </div>
     </div>
 </div>
