--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -1,15 +1,19 @@
+.header{
+  background-color: $secondary-Bg-color;
+}
 .header__container {
   // padding: 45px 0;
-    background-color: $header-Bg-color;
+   // background-color: $header-Bg-color;
   
     height: 230px;
     margin-left: auto;
     margin-right: auto;
+    @media screen and (min-width: 320px) {
     background-image: linear-gradient(to top left, $header-Bg-color, $header-Bg-color),
       url('../images/mobile/header-mobile-x1.jpg');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: 320px 230px ;
   
     @media (min-device-pixel-ratio: 2),
       (-webkit-min-device-pixel-ratio: 2),
@@ -18,7 +22,7 @@
       background-image: linear-gradient(to top left, $header-Bg-color, $header-Bg-color),
         url('../images/mobile/header-mobile-x2.jpg');
     }
-  
+}
     @media screen and (min-width: 769px) {
       background-image: linear-gradient(to top left, $header-Bg-color, $header-Bg-color),
         url('../images/tablet/header-tablet-x1.jpg');
@@ -52,7 +56,7 @@
     }
   }
   .header__container--library {
-    background-color: $header-Bg-color;
+   // background-color: $header-Bg-color;
     height: 230px;
     margin-left: auto;
     margin-right: auto;
@@ -105,10 +109,12 @@
 
 .nav {
     display: flex;
-    margin-bottom: 37px;
+  //  margin-bottom: 37px;
     
   }
-  
+  .navigation{
+    margin-bottom: 37px;
+  }
   .logo {
     margin-right: auto;
    
@@ -148,19 +154,14 @@
     }
   }
  
- /* .logo__nav:hover{
-    color: $acent-Bg-color;
-  }*/
+ 
+  
   .logo-filmoteka {
     width: 24px;
     height: 24px;
     text-decoration: none;
     cursor: pointer;
     color: $lite-text-color;
-  
-   /* &:hover {
-      color: $acent-Bg-color;
-    }*/
   }
   
   .form-search {
@@ -191,7 +192,7 @@
     width: 12px;
     height: 12px;
     fill: $lite-text-color;
-    &:hover{
+    &:hover, &:focus{
       fill: $acent-text-color;
       transition: fill 250ms $primary-animation;
     }
@@ -231,7 +232,7 @@
    
     color: $lite-text-color;
     transition: color 250ms $primary-animation;
-    &:hover {
+    &:hover, &:focus {
       color:  $acent-Bg-color;
     }
   }
@@ -245,7 +246,7 @@
     
     display: block;
     transition: color 250ms $primary-animation;
-    &:hover {
+    &:hover, &:focus {
       color:  $acent-Bg-color;
     }
   }
@@ -313,7 +314,7 @@
     text-transform: uppercase;
     cursor: pointer;
     transition: color 250ms $primary-animation;
-    &:hover {
+    &:hover, &:focus {
       color:  $acent-Bg-color;
     }
     
