--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -9,12 +9,12 @@
     margin-left: auto;
     margin-right: auto;
 
-    @media screen and (min-width: 320px) {
+    @media screen and (max-width: 320px) {
     background-image: linear-gradient(to top left, $header-Bg-color, $header-Bg-color),
       url('../images/mobile/header-mobile-x1.jpg');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 320px 230px ;
+    background-size: cover;
   
     @media (min-device-pixel-ratio: 2),
       (-webkit-min-device-pixel-ratio: 2),
@@ -24,7 +24,7 @@
         url('../images/mobile/header-mobile-x2.jpg');
     }
 }
-    @media screen and (min-width: 769px) {
+    @media screen and (min-width: 321px) and (max-width:768px) {
       background-image: linear-gradient(to top left, $header-Bg-color, $header-Bg-color),
         url('../images/tablet/header-tablet-x1.jpg');
       background-repeat: no-repeat;
@@ -40,7 +40,7 @@
       }
     }
   
-    @media screen and (min-width: 1025px) {
+    @media screen and (min-width: 769px) {
       background-image: linear-gradient(to top left, $header-Bg-color, $header-Bg-color),
         url('../images/desktop/header-desktop-x1.jpg');
       background-repeat: no-repeat;
@@ -62,7 +62,7 @@
     margin-left: auto;
     margin-right: auto;
 
-    @media screen and (min-width: 320px) {
+    @media screen and (max-width: 319px) {
     background-image: linear-gradient(to top left, $header-Bg-color, $header-Bg-color),
       url('../images/mobile/library-header-mobile-x1.jpg');
     background-repeat: no-repeat;
@@ -77,7 +77,7 @@
         url('../images/mobile/library-header-mobile-x2.jpg');
     }
     }
-    @media screen and (min-width: 769px) {
+    @media screen and (min-width: 320px)and (max-width:768px) {
       background-image: linear-gradient(to top left, $header-Bg-color, $header-Bg-color),
         url('../images/tablet/library-header-tablet-x1.jpg');
       background-repeat: no-repeat;
@@ -93,7 +93,7 @@
       }
     }
   
-    @media screen and (min-width: 1025px) {
+    @media screen and (min-width: 769px) {
       background-image: linear-gradient(to top left, $header-Bg-color, $header-Bg-color),
         url('../images/desktop/library-header-desktop-x1.jpg');
       background-repeat: no-repeat;
