--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -1,7 +1,10 @@
-.footer__info {
-    width:100%;
+.footer {
     padding-top: 29px;    
-    padding-bottom: 29px;    
+    padding-bottom: 29px;
+    background-color: $footer-Bg-color;
+}
+.footer__info {
+    width:100%;      
     display:flex;    
     flex-direction: column;    
     justify-content: center;    
@@ -10,12 +13,10 @@
     font-weight: 400;    
     line-height: 1.17;    
     color: $secondary-text-color;    
-    background-color: $footer-Bg-color;
+    
     @media screen and (min-width: 769px) {
         flex-direction: row;        
-        font-size: 16px;        
-        padding-top: 30px;        
-        padding-bottom:28px;    
+        font-size: 16px;         
     }
 }
 .line {    
@@ -60,8 +61,6 @@
 }
 
 .team-button{    
-    font-family: 'Roboto';
-    font-size: 14px;
     color: $secondary-text-color;    
     text-decoration: underline;  
     border: none;
@@ -69,8 +68,33 @@
     text-align: center;
     cursor: pointer;
 
-    &:hover {
+    &:hover,
+    &:focus {
         color: $acent-text-color;
         transition: color 250ms $primary-animation;
     }
+}
+
+.member-info {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -10px;
+    margin-bottom: -10px;
+    
+}
+
+.member-card {
+    flex-basis: calc(100% / 2 - 10px);
+    margin-left: 10px;
+    margin-bottom: 10px;    
+    border-radius: 2px;
+    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
+.member-name {
+    text-align: center;
+}
+
+.member-role {
+    text-align: center;
 }
