--- a/src/templates/team.hbs
+++ b/src/templates/team.hbs
@@ -2,7 +2,7 @@
     {{#each this}}     
     <li class="member-card">
         <div class="member-photo">
-            <img src="{{photo}}" alt="team member">
+            <img src="{{photo}}" width="100" height="150"alt="team member">
         </div>
         <p class="member-name">{{name}}</p>
         <p class="member-role">{{role}}</p>
