--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -77,21 +77,54 @@
 
 .member-info {
     display: flex;
-    flex-wrap: wrap;
-    margin-left: -10px;
-    margin-bottom: -10px;
+    flex-direction:column;
+    align-items: center;
+    padding-top: 20px;
+    
+    @media screen and(min-width:768px) {
+        flex-wrap: wrap;
+        margin-left: -10px;
+        margin-bottom: -10px;
+        flex-direction:row;
+    }
     
 }
 
-.member-card {
-    flex-basis: calc(100% / 2 - 10px);
-    margin-left: 10px;
-    margin-bottom: 10px;    
+.member-list {
+    margin-bottom: 20px;  
     border-radius: 2px;
     box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+
+    @media screen and (min-width: 768px) {
+        flex-basis: calc(100% / 3 - 10px);
+        margin-bottom: 10px;   
+        margin-left: 10px; 
+        
+    }
+
+    @media screen and (min-width: 1024px) {
+         flex-basis: calc(100% / 4 - 10px);
+        margin-bottom: 10px;   
+        margin-left: 10px; 
+    }
 }
 
+.member-card {
+    padding-bottom: 20px;
+
+}
+
+.member-photo {
+    display:flex;
+    justify-content: center;
+    margin-bottom: 10px;
+
+}
+
+
 .member-name {
+    font-size: 16px;
+    margin-bottom: 5px;
     text-align: center;
 }
 
