update btn for search

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,7 +36,7 @@
         placeholder="Поиск фильмов"
         minlength="3"
       />
-      <button class="search-button" type="submit">
+      <button class="search-button" type="submit" aria-label="search">
         <svg class="icon-search"  width="12" height="12"><use href="./images/icons/symbol-defs.svg#logo-search"></use></svg>
       </button>
     </form>
