--- a/src/sass/components/detailFilm.scss
+++ b/src/sass/components/detailFilm.scss
@@ -107,7 +107,7 @@
     grid-column-gap: 15px;
     justify-content: center;
     @media  screen and (min-width:1024px) {
-      justify-content: start;
+      // justify-content: start;
     }
   }
   
@@ -117,9 +117,9 @@
     border: 1px solid $secondary-Bg-color;
     font-weight: 500;
     border-radius: 5px;
-    padding: 15px 10px;
-    min-width: 112px;
-    max-width: 136px;
+    padding: 15px 25px;
+    min-width: 110px;
+    max-width: 200px;
     text-transform: uppercase;
     cursor: pointer;
   }
