add-render-watched-films
Реализовал отрисовку присмотренных фильмов пользователя,  и добавленных в очередь.

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -46,9 +46,9 @@
 
     <div class="btns-library is-hidden" data-action="btn-library-shown">
       <ul class="button-list">
-          <li class="button-list-item"><button type="button" class="btn-watched" data-action="btn-watched">Watched</button>
+          <li class="button-list-item"><button type="button" class="btn-watched" data-action="Watched">Watched</button>
           </li>
-          <li class="button-list-item"><button type="button" class="btn-queue" data-action="btn-queue">Queue</button></li>
+          <li class="button-list-item"><button type="button" class="btn-queue" data-action="queue">Queue</button></li>
       </ul>
   </div>
   
