--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -329,4 +329,9 @@ font-size:$primary-font-size ;
   }
 }
   
-
+.message-register{
+  padding-top: 20px;
+  font-size: 20px;
+  text-align: center;
+ color: red;
+}
