--- a/src/templates/fetchMovieTemplate.hbs
+++ b/src/templates/fetchMovieTemplate.hbs
@@ -17,8 +17,8 @@
     </div>
     <div class="gallery__card-caption">
       <h3 class="gallery__title">{{original_title}}</h2>
-      <p class="gallery__text"> {{filmGenry}}
-        <span class="gallery__text">| {{changedYear}}</span>
+      <p class="gallery__text"> {{genres}}
+        <span class="gallery__text">| {{release_date}}</span>
         <span class="gallery__card-rating">{{vote_average}}</span>
       </p>
   </article>   
