--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
               </svg>
           <h1 class="logo__nav">Filmoteka</h1>
         </a>
-        <ul class="site-nav__list">
+        <ul class="site-nav__list is-hidden">
           <li class="site-nav__item">
         <a href="#" class="home-link current-link site-nav__link">Home</a>
       </li>
@@ -21,7 +21,7 @@
         <button class="site-nav__button" id="form-open">Log in</button>
       </li>
       <li class="button__item">
-        <button class="site-nav__button" id="logOut">Log out</button>
+        <button class="site-nav__button is-hidden" id="logOut">Log out</button>
       </li>
     </ul>
       </nav>
