--- a/src/sass/components/general-styles.scss
+++ b/src/sass/components/general-styles.scss
@@ -48,9 +48,9 @@ body {
   }
 }
 .header__container {
-  background-color: $header-Bg-color;
+
   height: 230px;
-  padding-top: 46px;
+//  padding-top: 46px;
 }
 // ==================================================================
 //class visible hidden
