--- a/src/sass/components/detailFilm.scss
+++ b/src/sass/components/detailFilm.scss
@@ -53,8 +53,9 @@
   }
   
   .film-detail__item {
-    position: relative;
-    display: flex;
+    // position: relative;
+    // display: flex;
+    column-count: 2;
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
@@ -68,11 +69,11 @@
   }
   
   .film-detail__item--value {
-    position: absolute;
-    left: 50%;
-    display: flex;
-    align-items: center;
-    grid-column-gap: 10px;
+    // position: absolute;
+    // left: 50%;
+    // display: flex;
+    // align-items: center;
+    // grid-column-gap: 10px;
     font-weight: 500;
     font-size: 12px;
     line-height: 14px;
