--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,7 +13,7 @@
         <a href="#" class="home-link current-link site-nav__link">Home</a>
       </li>
         <li class="site-nav__item">
-        <a href="#" class="library-link site-nav__link">my library</a>
+        <a href="#" class="library-link site-nav__link" data-action="Watched">my library</a>
       </li>
     </ul>
     <ul class="button__list">
