--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
-<header class="header container">
-    <div class="header__container">
+<header class="header">
+    <div class="header__container container">
       <nav class="navigation">
         <div class="nav">
         <a href="#" lang="en" class="logo">
