--- a/src/sass/components/general-styles.scss
+++ b/src/sass/components/general-styles.scss
@@ -23,9 +23,23 @@ img {
 }
 // ==================================================================
 // main body stiles
+html,
 body {
+  height: 100%;
   font-family: $primary-font-family;
   font-size: $primary-font-size;
+}
+// ==================================================================
+// main stiles
+main {
+  flex: 1 1 auto;
+}
+// ==================================================================
+// wrapper stiles
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 // ==================================================================
 // main container stiles
@@ -50,7 +64,7 @@ body {
 .header__container {
   padding-top: 46px;
   height: 230px;
-//  padding-top: 46px;
+  //  padding-top: 46px;
 }
 // ==================================================================
 //class visible hidden
