--- a/src/templates/fetchMovieTemplate.hbs
+++ b/src/templates/fetchMovieTemplate.hbs
@@ -10,7 +10,7 @@
            {{else}}
           <img
             class="gallery__image"
-            src='https://i.ibb.co/NjvMgv7/poster.png'
+            src='https://raw.githubusercontent.com/VikOrlovskiy/Filmoteka-team-project/main/src/images/icons/poster.png'
             alt='no_poster'
           />
         {{/if}}
