--- a/src/sass/components/gallery.scss
+++ b/src/sass/components/gallery.scss
@@ -104,3 +104,12 @@
   background-color: $acent-Bg-color;
   border-radius: 5px;
 }
+.text-error{
+ margin: auto;
+ padding: 150px 0px;
+ text-align: center;
+font-weight: 500;
+font-size: 30px;
+text-transform: uppercase;
+  color: rgb(97, 32, 32);
+}
